syntax = "proto3";

package proto;
option java_package = "org.cloudfoundry.credhub.remote.grpc";
option java_outer_classname = "RemoteBackend";
option java_multiple_files = true;

message GetByNameRequest {
  string name = 1;
  string requester = 2;
}

message GetByIdRequest {
  string id = 1;
  string requester = 2;
}

message GetNVersionsRequest {
  string name = 1;
  int32 numberOfVersions = 2;
  string requester = 3;
}

message GetAllVersionsRequest {
  string name = 1;
  string requester = 2;
}

message GetResponse {
  string name = 1;
  string type = 2;
  string id = 3;
  string versionCreatedAt = 4;
  bytes data = 5;
  bytes generationParameters = 6;
}

message GetNVersionsResponse {
  repeated GetResponse versions = 1;
}

message SetRequest {
  string name = 1;
  string type = 2;
  bytes data = 3;
  string requester = 4;
  bytes generationParameters = 5;
}

message SetResponse {
  string name = 1;
  string type = 2;
  string id = 3;
  string versionCreatedAt = 4;
  bytes data = 5;
}

message DeleteByNameRequest {
  string name = 1;
  string requester = 2;
}

message FindContainingNameRequest {
  string name = 1;
  string requester = 2;
}

message FindStartingWithPathRequest {
  string path = 1;
  string requester = 2;
}

message FindResponse{
  repeated FindResult results = 1;
}

message FindResult{
  string name = 1;
  string versionCreatedAt = 2;
}

// Permissions
message FindPermissionByPathAndActorRequest {
  string path = 1;
  string actor = 2;
  string requester = 3;
}

message WritePermissionsRequest {
  string actor = 1;
  string path = 2;
  repeated string operations = 3;
  string requester = 4;
}

message PutPermissionsRequest {
  string uuid = 1;
  string actor = 2;
  string path = 3;
  repeated string operations = 4;
  string requester = 5;
}

message PatchPermissionsRequest {
  string uuid = 1;
  repeated string operations = 2;
  string requester = 3;
}

message PermissionsResponse {
  string uuid = 1;
  string actor = 2;
  string path = 3;
  repeated string operations = 4;
}

message Empty {

}

service CredentialService {
  rpc GetByName (GetByNameRequest) returns (GetResponse);
  rpc GetById (GetByIdRequest) returns (GetResponse);
  rpc GetAllVersions (GetAllVersionsRequest) returns (GetNVersionsResponse);
  rpc GetNVersions (GetNVersionsRequest) returns (GetNVersionsResponse);
  rpc Set (SetRequest) returns (SetResponse);
  rpc Delete (DeleteByNameRequest) returns (Empty);
  rpc FindContainingName (FindContainingNameRequest) returns (FindResponse);
  rpc FindStartingWithPath (FindStartingWithPathRequest) returns (FindResponse);
  rpc FindPermissionByPathAndActor(FindPermissionByPathAndActorRequest) returns (PermissionsResponse);
  rpc SavePermissions(WritePermissionsRequest) returns (PermissionsResponse);
  rpc PutPermissions(PutPermissionsRequest) returns (PermissionsResponse);
  rpc PatchPermissions(PatchPermissionsRequest) returns (PermissionsResponse);
}
